JEAP-7141: The SharedArtifactVersionCreatedEvent produced by the PAS now contains the system and the name of the schema of the data as variant (System_SchemaName)